--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^3.5.1",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "npm": "^6.4.1",
     "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
