--- a/package.json
+++ b/package.json
@@ -4,29 +4,22 @@
   "private": true,
   "homepage": "http://cycho04.github.io/react-app",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/free-solid-svg-icons": "^5.5.0",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "@material-ui/core": "^3.5.1",
-    "bootstrap": "^4.1.3",
+    "autoprefixer": "^10.4.18",
     "jquery": "^3.3.1",
-    "npm": "^6.4.1",
-    "popper.js": "^1.14.4",
-    "react": "^16.5.2",
+    "next": "^14.1.4",
+    "npm": "^10.5.0",
+    "postcss": "^8.4.37",
+    "react": "^18.2.0",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.5.2",
+    "react-dom": "^18.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5",
     "react-transition-group": "^2.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +31,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "@types/node": "^20.11.30",
+    "@types/react": "18.2.67",
+    "gh-pages": "^2.0.1",
+    "typescript": "^5.4.2"
   }
 }
