--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "private": true,
   "homepage": "http://cycho04.github.io/react-app",
   "dependencies": {
-    "autoprefixer": "^10.4.18",
     "jquery": "^3.3.1",
     "next": "^14.1.4",
     "npm": "^10.5.0",
-    "postcss": "^8.4.37",
     "react": "^18.2.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^18.2.0",
@@ -35,9 +33,12 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.11.30",
     "@types/react": "18.2.67",
+    "autoprefixer": "^10.4.19",
     "gh-pages": "^2.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   }
 }
